Move yum install of epel-release and jq to the docker file and not something that is done on first start of the docker container. (#18358)

--- a/dev-tools/packaging/templates/docker/Dockerfile.elastic-agent.tmpl
+++ b/dev-tools/packaging/templates/docker/Dockerfile.elastic-agent.tmpl
@@ -5,6 +5,7 @@
 FROM {{ .from }}
 
 RUN yum -y --setopt=tsflags=nodocs update && \
+    yum install -y epel-release jq \
     yum clean all
 
 LABEL \
