[Elastic Agent] Fix jq: command not found  (#18408)
* install jq in separate steps

* changelog

* move up

* comment

* embarrasing commit

* tidy

* Update dev-tools/packaging/templates/docker/Dockerfile.elastic-agent.tmpl

Co-authored-by: Blake Rouse <blake.rouse@elastic.co>

Co-authored-by: Blake Rouse <blake.rouse@elastic.co>

--- a/dev-tools/packaging/templates/docker/Dockerfile.elastic-agent.tmpl
+++ b/dev-tools/packaging/templates/docker/Dockerfile.elastic-agent.tmpl
@@ -4,8 +4,10 @@
 
 FROM {{ .from }}
 
+# Installing jq needs to be installed after epel-release and cannot be in the same yum install command.
 RUN yum -y --setopt=tsflags=nodocs update && \
-    yum install -y epel-release jq \
+    yum install epel-release -y && \
+    yum install jq -y && \
     yum clean all
 
 LABEL \
