--- a/winlogbeat/_meta/config/winlogbeat.event_logs.yml.tmpl
+++ b/winlogbeat/_meta/config/winlogbeat.event_logs.yml.tmpl
@@ -8,3 +8,9 @@ winlogbeat.event_logs:
 
   - name: ForwardedEvents
     tags: [forwarded]
+
+  - name: Windows PowerShell
+    event_id: 400, 403, 600, 800
+
+  - name: Microsoft-Windows-PowerShell/Operational
+    event_id: 4103, 4104, 4105, 4106
