Switch the GRPC communication where Agent is running the server and the beats are connecting back to Agent (#18973)
* Update libbeat fleet management to use elastic-agent-client.

* Work on switching to the new GRPC.

* More on refactor

* Add back the state.

* Format and check

* Add changelog.

* Cleanup.

* mage fmt in x-pack/libbeat.

* Update go.mod.

* Fix from review.

* Fix NewFromConfig comment

* Update go.mod

* Fix imports.

* Fix some locking issues from review.

* Fix lots of issues, add unit testing to cover restarts on failure reporting or crashes.

* Update go.sum

* Fix TestConfigurableRun.

* Fix range over registered apps in GRPC server using RWLock, switch to sync.Map.

* Fix config.

* Fix tests to work on Windows.

* Fix operation start to not start the same application twice.

* Fix enabling and disabling of monitoring.

--- a/x-pack/elastic-agent/_meta/config/common.p2.yml.tmpl
+++ b/x-pack/elastic-agent/_meta/config/common.p2.yml.tmpl
@@ -97,13 +97,18 @@ datasources:
 #   install_path: "${path.data}/install"
 
 # process:
-#   # minimal port number for spawned processes
-#   min_port: 10000
-#   # maximum port number for spawned processes
-#   max_port: 30000
 #   # timeout for creating new processes. when process is not successfully created by this timeout
 #   # start operation is considered a failure
 #   spawn_timeout: 30s
+#   # timeout for stopping processes. when process is not stopped by this timeout then the process.
+#   # is force killed
+#   stop_timeout: 30s
+
+# grpc:
+#   # listen address for the GRPC server that spawned processes connect back to.
+#   address: localhost
+#   # port for the GRPC server that spawned processes connect back to.
+#   port: 6789
 
 # retry:
 #   # Enabled determines whether retry is possible. Default is false.
