Add basic configuration for the APM tracer (#18861)
This includes an instrumentation namespace at the top of all beat config files. The tracer is exposed trough the Beat object.

--- a/libbeat/_meta/config/default.reference.yml.tmpl
+++ b/libbeat/_meta/config/default.reference.yml.tmpl
@@ -19,4 +19,5 @@
 {{template "monitoring.reference.yml.tmpl" .}}
 {{template "http.reference.yml.tmpl" .}}
 {{template "seccomp.reference.yml.tmpl" .}}
+{{template "instrumentation.reference.yml.tmpl" .}}
 {{template "migration.yml.tmpl" .}}
