--- a/libbeat/_meta/config/default.short.yml.tmpl
+++ b/libbeat/_meta/config/default.short.yml.tmpl
@@ -9,4 +9,5 @@
 {{template "processors.yml.tmpl" .}}
 {{template "logging.yml.tmpl" .}}
 {{template "monitoring.yml.tmpl" .}}
+{{template "instrumentation.yml.tmpl" .}}
 {{template "migration.yml.tmpl" .}}
