--- a/filebeat/tests/system/config/filebeat.yml.j2
+++ b/filebeat/tests/system/config/filebeat.yml.j2
@@ -86,6 +86,7 @@ filebeat.{{input_config | default("inputs")}}:
 
   {% if multiline %}
   multiline:
+    type: {{multiline_type}}
     pattern: {{pattern}}
     negate: {{negate}}
     match: {{match}}
