[Ingest Manager] Move to datastream instead of dataset (#20420)
[Ingest Manager] Move to datastream instead of dataset (#20420)

--- a/x-pack/elastic-agent/_meta/config/common.p2.yml.tmpl
+++ b/x-pack/elastic-agent/_meta/config/common.p2.yml.tmpl
@@ -17,7 +17,7 @@ inputs:
     #   Cannot include \, /, *, ?, ", <, >, |, ` ` (space character), ,, #
     #   Cannot start with -, _, +
     #   Cannot be . or ..
-    dataset.namespace: default
+    data_stream.namespace: default
     use_output: default
     streams:
       - metricset: cpu
@@ -27,13 +27,13 @@ inputs:
         #   Cannot include \, /, *, ?, ", <, >, |, ` ` (space character), ,, #
         #   Cannot start with -, _, +
         #   Cannot be . or ..
-        dataset.name: system.cpu
+        data_stream.dataset: system.cpu
       - metricset: memory
-        dataset.name: system.memory
+        data_stream.dataset: system.memory
       - metricset: network
-        dataset.name: system.network
+        data_stream.dataset: system.network
       - metricset: filesystem
-        dataset.name: system.filesystem
+        data_stream.dataset: system.filesystem
 
 # agent.monitoring:
 #   # enabled turns on monitoring of running processes
